Bug 45027 - [4.6 Regression] FAIL: c-c++-common/dfp/pr36800.c
Summary: [4.6 Regression] FAIL: c-c++-common/dfp/pr36800.c
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: target (show other bugs)
Version: 4.6.0
: P3 normal
Target Milestone: 4.6.0
Assignee: Richard Henderson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-07-21 22:50 UTC by H.J. Lu
Modified: 2010-07-22 22:04 UTC (History)
2 users (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed: 2010-07-22 18:19:31


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description H.J. Lu 2010-07-21 22:50:32 UTC
On Linux/x86-64, revision 162385 gave

FAIL: c-c++-common/dfp/pr36800.c execution test
FAIL: c-c++-common/dfp/pr36800.c execution test

Revision 162382 is OK.
Comment 1 H.J. Lu 2010-07-21 23:14:30 UTC
It is caused by revision 162384:

http://gcc.gnu.org/ml/gcc-cvs/2010-07/msg00738.html
Comment 2 Richard Henderson 2010-07-22 21:40:54 UTC
Subject: Bug 45027

Author: rth
Date: Thu Jul 22 21:40:41 2010
New Revision: 162429

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=162429
Log:
	PR target/45027
	* config/i386/i386.c (setup_incoming_varargs_64): Force the use
	of V4SFmode for the SSE saves; increase stack alignment if needed.
	(ix86_gimplify_va_arg): Don't increase stack alignment here.

Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/config/i386/i386.c

Comment 3 Richard Henderson 2010-07-22 22:04:20 UTC
Fixed.