	PR target/45027 	* config/i386/i386.c (setup_incoming_varargs_64): Force the use 	of V4SFmode for the SSE saves; increase stack alignment if needed. 	(ix86_gimplify_va_arg): Don't increase stack alignment here.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@162429 138bc75d-0d04-0410-961f-82ee72b054a4